--- a/index.html
+++ b/index.html
@@ -7,14 +7,30 @@
 	</head>
 	<body>
 		<header>
-			
+			<div class="menurolativo">
+				<nav class="menu">
+				  <div class="divimgmenu">
+				  	<img class="imgmenu" src="Assets/logo2.jpg">
+				  	<!-- <img class="imgmenino" src="Assets/26814732_1964966790410601_1624052275250813110_n.png"> -->
+				  	<div class="h1menu>">
+				  		<!-- <h1>A sua ajuda pode mudar esse nosso lugar!</h1> -->
+				    </div>
+				  </div>
+				  <div class="textomenu">
+					<a class="linkmenu1" href="#sobre">Sobre</a>
+					<a class="linkmenu2" href="#atividades">Atividades</a>
+					<a class="linkmenu3" href="#parceiros">Parceiros</a>
+					<a class="linkmenu4" href="#contatos">Contatos</a>
+				  </div>
+				</nav> 
+			</div>
 		</header>
 
 		<main class="main_atividades" id="atividades">
 			<section class="sec_atividades">
 				<img class="sec_atividades_img" src="Assets/FullSizeRender (3).jpg">
-				<p class="sec_atividades_p">O Projeto Crianças Felizes é uma uma iniciativa do Luciano Daniel, jovem morador do alemão, que aos 13 anos de idade fundou o projeto na intenção de reduzir as mazelas trazidas pelas obras do Pac. Depois que o Programa do Governo Federal passou pela comunidade, uma série de problemas começaram a surgir, como esgoto a céu aberto, entulhos das casas derrubadas, acúmulo de lixo em local impróprio para o descarte. Em 4 de maio de 2013, o projeto surge como forma de resistência, promovendo desde então, mais de 20 ações que beneficiaram mais de 8.000 crianças.</p>
-			</section><br>
+				<p class="sec_atividades_p">O <strong>Projeto Crianças Felizes</strong> é uma uma iniciativa do Luciano Daniel, jovem morador do alemão, que aos 13 anos de idade fundou o projeto na intenção de reduzir as mazelas trazidas pelas obras do Pac. Depois que o Programa do Governo Federal passou pela comunidade, uma série de problemas começaram a surgir, como esgoto a céu aberto, entulhos das casas derrubadas, acúmulo de lixo em local impróprio para o descarte. Em 4 de maio de 2013, o projeto surge como forma de resistência, promovendo desde então, mais de 20 ações que beneficiaram mais de 8.000 crianças.</p>
+			</section>
 			<section class="sec2_atividades">
 				<img class="sec2_atividades_imgs foto1" src="Assets/30261565_2000508956856384_5324278173245008757_n.jpg">
 				<img class="sec2_atividades_imgs foto2" src="Assets/35077822_2028462240727722_9145474966626500608_n.jpg">
