--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 				<img src="Assets/Group 153.svg">
 			</section> -->
 			<section class="sec_ativ">
-				<p class="sec_ativ_p">O <strong>Projeto Crianças Felizes</strong> é uma uma iniciativa do Luciano Daniel, jovem morador do alemão, que aos 13 anos de idade fundou o projeto na intenção de reduzir as mazelas trazidas pelas obras do Pac.<br><br>Depois que o Programa do Governo Federal passou pela comunidade, uma série de problemas começaram a surgir, como esgoto a céu aberto, entulhos das casas derrubadas, acúmulo de lixo em local impróprio para o descarte.<br><br> Em 4 de maio de 2013, o projeto surge como forma de resistência, promovendo desde então, mais de 20 ações que beneficiaram mais de 8.000 crianças.</p>
+				<div class="textsec">
+					<p class="sec_ativ_p">O <strong>Projeto Crianças Felizes</strong> é uma iniciativa do Luciano Daniel, jovem morador do alemão, que aos 13 anos de idade fundou o projeto na intenção de reduzir as mazelas trazidas pelas obras do Pac.<br><br>Depois que o Programa do Governo Federal passou pela comunidade, uma série de problemas começaram a surgir, como esgoto a céu aberto, entulhos das casas derrubadas, acúmulo de lixo em local impróprio para o descarte.<br><br> Em 4 de maio de 2013, o projeto surge como forma de resistência, promovendo desde então, mais de 20 ações que beneficiaram mais de 8.000 crianças.</p>
+				</div>
 			</section>
 		</main>
 
